[gd_scene load_steps=3 format=3 uid="uid://c61e0lq7rt214"]

[ext_resource type="Script" path="res://Playing/MakeTrumpPhase1.gd" id="1_rl7lb"]
[ext_resource type="PackedScene" uid="uid://xbr48vwxhoga" path="res://Playing/dealerIndicator.tscn" id="2_fv6wg"]

[node name="MakeTrumpPhase1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rl7lb")

[node name="Order UP" type="Button" parent="."]
layout_mode = 0
offset_left = -89.0
offset_top = 16.0
offset_right = -9.0
offset_bottom = 47.0
text = "Order UP"

[node name="Pass" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 16.0
offset_right = 84.0
offset_bottom = 49.0
text = "Pass
"

[node name="DealerIndicator" parent="." instance=ExtResource("2_fv6wg")]
position = Vector2(-1, 8)

[connection signal="pressed" from="Order UP" to="." method="_on_order_up_pressed"]
[connection signal="pressed" from="Pass" to="." method="_on_pass_pressed"]
